--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -293,7 +293,7 @@ conclusie_df <- data.frame(onderdeel = "beheersovereenkomsten",
 
 
 # Vergelijking doel- en controlegebieden
-## Oppervlakte
+## Oppervlakte{#oppervlakte}
 
 ```{r}
 leefdaal %>%
@@ -313,7 +313,7 @@ conclusie_df <- rbind(conclusie_df, c("oppervlakte", "0", "0",
 ```
 
 
-## Landgebruiksamenstelling
+## Landgebruiksamenstelling{#landgebruik}
 
 We beschouwen de rasterlaag van landgebruiksamenstelling van 2019. Voorlopig is de laag van 2022 nog niet beschikbaar (om de 3 jaar vernieuwing).
 
@@ -452,7 +452,7 @@ conclusie_df <- rbind(conclusie_df, c("landgebruiksamenstelling", "+", "0",
 ```
 
 
-## Hoofdteelt
+## Hoofdteelt{#teelt}
 
 Belangrijkste teelten in 2021.
 
@@ -577,7 +577,7 @@ conclusie_df <- rbind(conclusie_df, c("hoofdteelten", "+", "0",
 ```
 
 
-## Perceelsgrootte
+## Perceelsgrootte{#perceel}
 
 Op basis van hoofdteelt-laag in 2021. Hiervoor mergen we aaneenliggende percelen van hetzelfde type (zelfde hoofdteelt).
 
@@ -636,10 +636,10 @@ percelen_leefdaal %>%
 
 **Conclusie**  
 
-De perceelsgroottes in Lovenjoel zijn iets gelijkaardiger als Zavelberg dan Kortenberg (mediaan), maar het verschil tussen Kortenberg en Lovenjoel is niet zo groot. We geven daarom Kortenberg een "0" en Lovenjoel een "+".
+De perceelsgroottes in Lovenjoel zijn iets gelijkaardiger als Zavelberg dan Kortenberg (mediaan), maar het verschil tussen Kortenberg en Lovenjoel is niet zo groot. We geven daarom Kortenberg een "0" en Lovenjoel een "0".
 
 ```{r}
-conclusie_df <- rbind(conclusie_df, c("perceelsgrootte", "0", "+", 
+conclusie_df <- rbind(conclusie_df, c("perceelsgrootte", "0", "0", 
                         "voordeel Lovenjoel niet super groot"))
 ```
 
@@ -885,8 +885,66 @@ We voeren eerst PCA uit op specifieke categoriën.
 # Functie om proportie variatie te berekenen van PC's
 perc_var <- function(vec) {
   data.frame(proportie = (vec ^ 2) / sum(vec ^ 2), PC = seq_along(vec))
-  }
+}
+
+# Definieer pijlstijl voor plotten
+arrow_style <- arrow(
+  angle = 20, ends = "first", type = "closed", length = grid::unit(8, "pt")
+)
 ```
+
+
+#### Oppervlakte van gebied en perceelsgrootte
+
+```{r}
+pca_opp <- prcomp(leefdaal_multivar %>% select(perceelsgrootte, oppervlakte), 
+                  center = TRUE, scale = TRUE)
+```
+
+De eerste PC verklaart quasi alle variatie in de data. 
+
+```{r}
+perc_var(pca_opp$sdev) %>%
+  ggplot(aes(PC, proportie)) +
+    geom_bar(stat = "identity") +
+    scale_x_continuous(breaks = 1:length(pca_opp$sdev)) +
+    scale_y_continuous(limits = c(0, 1)) +
+    geom_text(aes(label = round(proportie, digits = 3)), vjust = -0.5)
+```
+
+Lovenjoel ligt dichter bij Zavelberg langs PC1 dan Kortenberg.
+
+```{r}
+pca_opp$x %>%
+  as.data.frame() %>%
+  rownames_to_column("deelgebied") %>%
+  ggplot(aes(PC1, PC2, colour = deelgebied)) + 
+    geom_point(size = 3) +
+    scale_y_continuous(limits = c(-3, 3)) +
+    scale_x_continuous(limits = c(-3, 3)) +
+    geom_text(aes(label = deelgebied), vjust = -1) +
+    geom_text(aes(label = paste0("(", round(PC1, digits = 2), ", ", 
+              round(PC2, digits = 2), ")")), vjust = 1.5) +
+    geom_hline(yintercept = 0, colour = "grey", linetype = "dashed") +
+    geom_vline(xintercept = 0, colour = "grey", linetype = "dashed") +
+    theme(legend.position = "") +
+    labs(x = "PC1", y = "PC2")
+```
+
+```{r}
+pca_opp$rotation %>%
+  as.data.frame() %>%
+  rownames_to_column("deelgebied") %>%
+  ggplot(aes(PC1, PC2)) +
+    geom_hline(yintercept = 0, colour = "grey", linetype = "dashed") +
+    geom_vline(xintercept = 0, colour = "grey", linetype = "dashed") +
+    geom_segment(xend = 0, yend = 0, arrow = arrow_style) +
+    geom_text(aes(label = deelgebied), hjust = 1, vjust = -0.5, nudge_x = -0.02) +
+    scale_y_continuous(limits = c(-1, 1)) +
+    scale_x_continuous(limits = c(-1, 1))
+```
+
+Deze resultaten zijn in overeenstemming met onze eerdere conclusies. In \@ref(oppervlakte) zagen we dat Zavelberg en Lovenjoel groter zijn dan Kortenberg, terwijl we in \@ref(perceel) zagen dat de mediaan van de perceelgroottes kleiner zijn in Lovenjoel en Zavelberg dan Kortenberg. Dat maakt Lovenjoel meer gelijkaardig aan Zavelberg dan Kortenberg. We hebben toen echter geen voordeel gegeven aan Lovenjoel t.o.v. Kortenberg omdat de verschillen dermate klein zijn.
 
 
 #### Openheid landschap
@@ -903,6 +961,8 @@ De eerste PC verklaart quasi alle variatie in de data.
 perc_var(pca_openheid$sdev) %>%
   ggplot(aes(PC, proportie)) +
     geom_bar(stat = "identity") +
+    scale_x_continuous(breaks = 1:length(pca_openheid$sdev)) +
+    scale_y_continuous(limits = c(0, 1)) +
     geom_text(aes(label = round(proportie, digits = 3)), vjust = -0.5)
 ```
 
@@ -926,11 +986,6 @@ pca_openheid$x %>%
 ```
 
 ```{r}
-# Definieer pijlstijl voor plotten
-arrow_style <- arrow(
-  angle = 20, ends = "first", type = "closed", length = grid::unit(8, "pt")
-)
-
 pca_openheid$rotation %>%
   as.data.frame() %>%
   rownames_to_column("deelgebied") %>%
